--- a/frontend/src/App.module.css
+++ b/frontend/src/App.module.css
@@ -1,9 +1,8 @@
 .toast {
   position: absolute;
   top: 10%;
-  left: 0;
-  right: 0;
-  margin: 0 auto;
+  right: 20%;
+  width: 400px;
 }
 
 .spinner {
